# requests-responses-capture

./: .gitignore  pyproject.toml
rcapture/: __init__.py
tests/: conftest.py  test_rcapture.py
