[tool.poetry]
name = "requests-responses-capture"
version = "0.0.1"
description = ""
authors = ["Frank Yang <puilp0502@gmail.com>"]
license = "ISC"
packages = [
    { include = "rcapture" },
]

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.12.0"
responses = "^0.15.0"

[tool.poetry.dev-dependencies]
black = "^21.10b0"
types-requests = "^2.26.0"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
